--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="tab-buttons">
                 <button id="tab1" class="tab-btn active">AI日报</button>
                 <button id="tab2" class="tab-btn">API测试</button>
+                <button id="tab3" class="tab-btn">武将战法</button>
             </div>
             <h1><i class="fas fa-robot"></i> AI日报</h1>
             <p>每日AI行业热点话题</p>
@@ -89,6 +90,32 @@
                     <h3>消息记录</h3>
                     <div id="wsMessages" class="message-log"></div>
                 </div>
+            </div>
+        </div>
+        
+        <div id="tab3-content" class="game-data-container" style="display: none;">
+            <div class="data-section generals-section">
+                <h2>武将列表</h2>
+                <div id="generalsLoading" class="loading">
+                    <div class="spinner"></div>
+                    <p>正在获取武将数据...</p>
+                </div>
+                <div id="generalsError" class="error" style="display: none;">
+                    <p>获取武将数据失败，请稍后再试。</p>
+                </div>
+                <ul id="generalsList" class="data-list"></ul>
+            </div>
+
+            <div class="data-section tactics-section">
+                <h2>战法列表</h2>
+                <div id="tacticsLoading" class="loading">
+                    <div class="spinner"></div>
+                    <p>正在获取战法数据...</p>
+                </div>
+                <div id="tacticsError" class="error" style="display: none;">
+                    <p>获取战法数据失败，请稍后再试。</p>
+                </div>
+                <ul id="tacticsList" class="data-list"></ul>
             </div>
         </div>
     </main>
